# SDL-3D-Engine

./: .gitignore  CMakeLists.txt  README.md
include/nch/: cpp-utils  math-utils  sdl-utils
src/main/: Main.cpp  Main.h  MainLoop.cpp  MainLoop.h
src/math/: Line3d.cpp  Line3d.h  Matrix4d.cpp  Matrix4d.h  Point3d.cpp  Point3d.h  Poly3d.cpp  Poly3d.h  Tri.cpp  Tri.h  Tri3d.cpp  Tri3d.h  Vec3d.cpp  Vec3d.h
src/world/: Mesh.cpp  Mesh.h  World.cpp  World.h
